[package]
name = "ant-counter"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
autonomi = "0.4.2"
bincode = "1.3.3"
eyre = "0.6.12"
jiff = { version = "0.2.4", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.12"
tokio = "1.43.0"
